fix(compare): set overflow to auto

--- a/app/javascript/stylesheets/partials/compare-models.scss
+++ b/app/javascript/stylesheets/partials/compare-models.scss
@@ -1,8 +1,7 @@
 @import '~stylesheets/variables';
 
 .compare-models {
-  overflow-x: auto;
-  overflow-y: scroll;
+  overflow: auto;
 
   .compare-image {
     height: 180px;
